fix: change input and textarea color for visibility

--- a/components/contact/contact.module.scss
+++ b/components/contact/contact.module.scss
@@ -71,6 +71,7 @@
     border: 0;
     outline: 0;
     background-color: $color-gray-3;
+    color: $color-light;
   }
 
   & textarea {
@@ -80,6 +81,7 @@
     outline: 0;
     resize: none;
     background-color: $color-gray-3;
+    color: $color-light;
   }
 
   &__submit_button_container {
